uploaded all html files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Summary</title>
+  <title>Landing Page</title>
 
   <!-- Responsive MOBILE shrink to fit -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -60,7 +60,7 @@
                         <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
                     </div>
                 </div>
-                <!--visualization adjustments-->
+                <!--visualization container-->
                 <div class="col-6 col-md-4">
                     <div class="col-md-12">
                         <h3>Visualizations</h3>
