--- a/temp.html
+++ b/temp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Summary</title>
+  <title>Temperature</title>
 
   <!-- Responsive MOBILE shrink to fit -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -53,7 +53,7 @@
                                   <h2>Max Temperature</h2>
                                   <hr>
         <a href="temp.html"><img width="100%" src="Resources/assets/images/Fig1.png" alt="temperature" class="center"></a>
-        As expected, the weather becomes significantaly warmer as one approaches the equator (Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
+        <p>As expected, the weather becomes significantaly warmer as one approaches the equator (Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
                               </div>
                           </div>
                           <!--visualization container-->
