--- a/humidity.html
+++ b/humidity.html
@@ -53,7 +53,7 @@
                                   <h2>Humidity</h2>
                                   <hr>
         <a href="humidity.html"><img width="100%" src="Resources/assets/images/Fig2.png" alt="humidity" class="center"></a>
-        <p>TBD</p>
+        <p>There is not a huge correlation between humidity and latitude.</p>
                               </div>
                           </div>
                           <!--visualization container-->
