--- a/windspeed.html
+++ b/windspeed.html
@@ -53,7 +53,7 @@
                                   <h2>Wind Speed</h2>
                                   <hr>
         <a href="windspeed.html"><img width="100%" src="Resources/assets/images/Fig4.png" alt="windpseed" class="center"></a>
-        <p>TBD</p>
+        <p>The data shows that the farther North, the higher the wind speed, although it is likely to be inconclusive.</p>
                               </div>
                           </div>
                           <!--visualization container-->
