--- a/cloudiness.html
+++ b/cloudiness.html
@@ -53,7 +53,7 @@
                                   <h2>Cloudiness</h2>
                                   <hr>
         <a href="cloudiness.html"><img width="100%" src="Resources/assets/images/Fig3.png" alt="cloudiness" class="center"></a>
-        <p>TBD</p>
+        <p>According to our data, there is not a direct relationship between cloudiness and city latitude.</p>
                               </div>
                           </div>
                           <!--visualization container-->
